--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
 									<h3>Poll App</h3>
 								</div>
 								<a class="grax_tm_full_link" href="https://github.com/Kordedekehine/people-decision-poll" target="_blank"></a>
+								<h6>Poll App</h6>
 							</div>
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay=".2s">
@@ -271,10 +272,11 @@
 								</div>
 								<div class="overlay"></div>
 								<div class="details">
-									<span>Korede</span>
+									<span>Korede Cafe</span>
 									<h3>Cafe-Laptop-Rentals</h3>
 								</div>
 								<a class="grax_tm_full_link" href="https://github.com/Kordedekehine/Cafe-Laptop-Rentals" target="_blank"></a>
+								<h6>Cafe-Laptop-Rentals</h6>
 							</div>
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay=".4s">
@@ -289,6 +291,7 @@
 									<h3>Bank App</h3>
 								</div>
 								<a class="grax_tm_full_link" href="https://github.com/Kordedekehine/SpringBoot-Bank-App" target="_blank"></a>
+								<h6>Bank App</h6>
 							</div>
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s">
@@ -303,6 +306,7 @@
 									<h3>Restuarant Services</h3>
 								</div>
 								<a class="grax_tm_full_link" href="https://omnifood.netlify.app/" target="_blank"></a>
+								<h6>Restuarant Services</h6>
 							</div>
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay=".2s">
@@ -317,6 +321,7 @@
 									<h3>Online Diary</h3>
 								</div>
 								<a class="grax_tm_full_link " href="https://github.com/Kordedekehine/MY-LIBERATION-NOTES" target="_blank"></a>
+								<h6>Online Diary</h6>
 							</div>
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay=".4s">
@@ -331,6 +336,7 @@
 									<h3>Start-up idea</h3>
 								</div>
 								<a class="grax_tm_full_link" href="https://github.com/Kordedekehine/en-masse" target="_blank"></a>
+								<h6>En-Masse(Private)</h6>
 							</div>
 						</li>
 					</ul>
@@ -346,9 +352,9 @@
 			<div class="part_inner">
 				<div class="left wow fadeInLeft" data-wow-duration="1.5s">
 					<h3>I have high skills in developing and programming</h3>
-					<p>I was doing everything in my power to provide me with all the experiences to provide cost-effective and high quality products to satisfy my customers all over the world</p>
+					<p>I do everything in my power to provide cost-effective and high quality products to satisfy my customers all over the world</p>
 				</div>
-				<div class="right wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay=".2s">
+				<!-- <div class="right wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay=".2s">
 					<div class="kioto_progress">
 						<div class="progress_inner" data-value="95">
 							<span><span class="label">Core Java</span><span class="number">95%</span></span>
@@ -363,7 +369,7 @@
 							<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
