--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 							<li>
 								<div class="list_inner">
 									<img class="svg" src="img/svg/email.svg" alt="" />
-									<p><span class="first">Email:</span><span class="second"><a href="#">salamikorede345@gmail.com</a></span></p>
+									<p><span class="first">Email:</span><span class="second"><a href="#">djava8410@gmail.com</a></span></p>
 								</div>
 							</li>
 							<li>
